src/test/deca/context/invalid/obtained_res/champVoidcont.res
DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:40) - verify program: start
DEBUG fr.ensimag.deca.tree.ListDeclClass.verifyListClass(ListDeclClass.java:43) - verify listClass: start
DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:45) - verify program: Pass 1 end
./src/test/deca/context/invalid/created/testPass2/champVoid.deca:2:9: VoidFieldTypeException: It is not allowed to declare a field with the void type.
